<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_margin="50dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gameTitle"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="?attr/colorPrimary"

        android:gravity="center_horizontal"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/playOffline"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/playOffline"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/playOnline"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/playOnline"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/gameIDHint"
                android:id="@+id/gameIdInput"
                android:gravity="center"/>

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/joinOnline"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:text="@string/joinOnline"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>